--- a/audi.html
+++ b/audi.html
@@ -497,18 +497,20 @@
 		<div class="popup__w">
 			<div class="popup__i"><img src="/img/audi/modal-car.png" alt=""></div>
 			<div class="popup__content">
-				<h3 class="popup__title">Есть уточнения?</h3>
-				<p class="popup__text text">Отвечаем на вопросы</p>
-				<form class="popup__form">
-					<div class="popup__input">
-						<label for="popumInputName" class="form-label text_sm">Ваше имя:</label>
-						<input type="email" placeholder="Василий" class="form-control" id="popumInputName" aria-describedby="emailHelp">
-					</div>
-					<div class="popup__input">
-						<label for="popumInputTel" class="form-label text_sm">Ваш телефон:</label>
-						<input type="tel" class="form-control" placeholder="+7 975 123 45 67" id="popumInputTel">
-					</div>
-				</form>
+				<div class="popup__wr">
+					<h3 class="popup__title">Есть уточнения?</h3>
+					<p class="popup__text text">Отвечаем на вопросы</p>
+					<form class="popup__form">
+						<div class="popup__input">
+							<label for="popumInputName" class="form-label text_sm">Ваше имя:</label>
+							<input type="email" placeholder="Василий" class="form-control" id="popumInputName" aria-describedby="emailHelp">
+						</div>
+						<div class="popup__input">
+							<label for="popumInputTel" class="form-label text_sm">Ваш телефон:</label>
+							<input type="tel" class="form-control" placeholder="+7 975 123 45 67" id="popumInputTel">
+						</div>
+					</form>
+				</div>
 				<button type="submit" class="popup__btn btn btn_primary">Заказать обратный звонок</button>
 			</div>
 		</div>
@@ -517,17 +519,19 @@
 		<div class="popup__w">
 			<div class="popup__i"><img src="/img/audi/modal-car.png" alt=""></div>
 			<div class="popup__content">
-				<h2 class="popup__title">Запись на СТО</h2>
-				<form class="popup__form">
-					<div class="popup__input">
-						<label for="popumInputNameServ" class="form-label text_sm">Ваше имя:</label>
-						<input type="email" placeholder="Василий" class="form-control" id="popumInputNameServ" aria-describedby="emailHelp">
-					</div>
-					<div class="popup__input">
-						<label for="popumInputTelServ" class="form-label text_sm">Ваш телефон:</label>
-						<input type="tel" class="form-control" placeholder="+7 975 123 45 67" id="popumInputTelServ">
-					</div>
-				</form>
+				<div class="popup__wr">
+					<h2 class="popup__title">Запись на СТО</h2>
+					<form class="popup__form">
+						<div class="popup__input">
+							<label for="popumInputNameServ" class="form-label text_sm">Ваше имя:</label>
+							<input type="email" placeholder="Василий" class="form-control" id="popumInputNameServ" aria-describedby="emailHelp">
+						</div>
+						<div class="popup__input">
+							<label for="popumInputTelServ" class="form-label text_sm">Ваш телефон:</label>
+							<input type="tel" class="form-control" placeholder="+7 975 123 45 67" id="popumInputTelServ">
+						</div>
+					</form>
+				</div>
 				<button type="submit" class="popup__btn btn btn_primary">Заказать обратный звонок</button>
 			</div>
 		</div>
