--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-
 	<header class="header">
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
-					<div class="header__logo"><img src="img/svg/logo.svg" alt="Логотип 'Оживляющий Гараж'"></div>
+					<div class="header__logo"><a href="/"><img src="img/svg/logo.svg" alt="Логотип 'Оживляющий Гараж'"></a></div>
 				</div>
 			</div>
 		</div>
