--- a/wolksvagen.html
+++ b/wolksvagen.html
@@ -17,7 +17,7 @@
 	<header class="header">
 		<div class="container">
 			<div class="row">
-				<div class="col-3 col-sm-2 d-flex align-items-center"><div class="header__logo"><img src="/img/svg/logo.svg" alt="Оживляющий Гараж"></div></div>
+				<div class="col-3 col-sm-2 d-flex align-items-center"><div class="header__logo"><a href="/"><img src="/img/svg/logo.svg" alt="Оживляющий Гараж"></a></div></div>
 				<div class="col-7 col-sm-9 col-md-6 col-lg-4 offset-lg-1">
 					<div class="header__menu d-flex justify-content-between justify-content-sm-around justify-content-md-between align-items-center">
 						<a href="/wolksvagen/#services" class="header__link text">Услуги</a>
