--- a/wolksvagen.html
+++ b/wolksvagen.html
@@ -36,7 +36,7 @@
 		</div>
 	</header>
 
-	<section class="offer">
+	<section class="offer offer__wolks">
 		<div class="container">
 			<div class="row">
 				<div class="col-12 col-lg-6">
