--- a/wolksvagen.html
+++ b/wolksvagen.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Wolksvagen</title>
+	<title>Фольцваген</title>
 	<link type="image/x-icon" href="/img/favicon.png" rel="shortcut icon">
 	<link type="image/x-icon" href="/img/favicon.png" rel="icon">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/wolksvagen.css">
@@ -20,15 +20,26 @@
 				<div class="col-3 col-sm-2 d-flex align-items-center"><div class="header__logo"><a href="/"><img src="/img/svg/logo.svg" alt="Оживляющий Гараж"></a></div></div>
 				<div class="col-7 col-sm-9 col-md-6 col-lg-4 offset-lg-1">
 					<div class="header__menu d-flex justify-content-between justify-content-sm-around justify-content-md-between align-items-center">
-						<a href="/wolksvagen/#services" class="header__link text">Услуги</a>
-						<a href="/" class="header__link text">Отзывы</a>
-						<a href="/" class="header__link text">Контакты</a>
+						<div class="dropdown">
+							<button href="/skoda/#services" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="header__link dropdown-toggle text">Услуги</button>
+							<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+								<li><a class="dropdown-item" data-service="1" href="#services">Диагностика</a></li>
+								<li><a class="dropdown-item" data-service="2" href="#services">Техническое обслуживание</a></li>
+								<li><a class="dropdown-item" data-service="3" href="#services">Ремонт двигателя</a></li>
+								<li><a class="dropdown-item" data-service="4" href="#services">Ремонт АКПП/DSG</a></li>
+								<li><a class="dropdown-item" data-service="5" href="#services">Ремонт ходовой</a></li>
+								<li><a class="dropdown-item" data-service="6" href="#services">Тормозная система</a></li>
+								<li><a class="dropdown-item" data-service="7" href="#services">Электрика</a></li>
+							</ul>
+						</div>
+						<a href="#feedback" class="header__link text">Отзывы</a>
+						<a href="#contacts" class="header__link text">Контакты</a>
 					</div>
 				</div>
 				<div class="col-2 col-sm-1 col-md-4 col-lg-5 d-flex align-items-center justify-content-end">
 					<div class="header__w">
 						<p class="header__time">Ежедневно <br> с 11:00 до 20:00</p>
-						<button class="header__btn">8 (926) 110-93-00</button>
+						<button class="header__btn" data-bs-toggle="modal" data-bs-target="#modalCall">8 (926) 110-93-00</button>
 					</div>
 					<a href="/" class="header__profile"><img src="/img/svg/profile.svg" alt="Профиль"></a>
 				</div>
@@ -43,8 +54,8 @@
 					<h2 class="offer__subtitle">Оживляющий гараж</h2>
 					<h1 class="offer__title">Профильный автосервис <span>Ауди</span></h1>
 					<div class="offer__w">
-						<button class="offer__btn offer__btn_serv btn btn_primary">Записаться на СТО</button>
-						<button class="offer__btn offer__btn_quest btn">Получить консультацию</button>
+						<button class="offer__btn offer__btn_serv btn btn_primary" data-bs-toggle="modal" data-bs-target="#modalServ">Записаться на СТО</button>
+						<button class="offer__btn offer__btn_quest btn" data-bs-toggle="modal" data-bs-target="#modalCall">Получить консультацию</button>
 					</div>
 					<div class="offer__adress">
 						<p class="offer__text">г. Москва, ул. Краснобогатырская д.2 стр.30, м. ВДНХ</p>
@@ -164,7 +175,7 @@
 								<div class="services__input form-check">
 									<input type="email" class="form-control" placeholder="Например: +79123456789" id="popumInputName" aria-describedby="emailHelp">
 								</div>
-								<button class="services__btn btn btn_primary">Записаться на СТО</button>
+								<button class="services__btn btn btn_primary" data-bs-toggle="modal" data-bs-target="#modalServ">Записаться на СТО</button>
 							</div>
 						</div>
 					</div>
@@ -278,7 +289,7 @@
 						<div class="services__input form-check">
 							<input type="email" class="form-control" placeholder="Например: +79123456789" id="popumInputName" aria-describedby="emailHelp">
 						</div>
-						<button class="services__btn btn btn_primary">Записаться на СТО</button>
+						<button class="services__btn btn btn_primary" data-bs-toggle="modal" data-bs-target="#modalServ">Записаться на СТО</button>
 					</div>
 				</div>
 			</div>
@@ -442,7 +453,7 @@
 		<div class="container">
 			<h2 class="video__title">Наше видео</h2>
 			<div class="video__content">
-				<div class="video__play"></div>
+				<div class="video__play"><img src="/img/svg/play-blue.svg" alt=""></div>
 			</div>
 		</div>
 	</section>
@@ -493,49 +504,56 @@
 		</div>
 	</section>
 
-
-	<div class="popup popup-question">
-		<div class="popup__w">
-			<div class="popup__i"><img src="/img/wolksvagen/modal-car.png" alt=""></div>
-			<div class="popup__content">
-				<div class="popup__wr">
-					<h3 class="popup__title">Есть уточнения?</h3>
-					<p class="popup__text text">Отвечаем на вопросы</p>
-					<form class="popup__form">
-						<div class="popup__input">
-							<label for="popumInputName" class="form-label text_sm">Ваше имя:</label>
-							<input type="email" placeholder="Василий" class="form-control" id="popumInputName" aria-describedby="emailHelp">
+	<div class="modal  fade" id="modalCall" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="popup__w">
+					<div class="popup__i"><img src="/img/wolksvagen/modal-car.png" alt=""></div>
+					<div class="popup__content">
+						<div class="popup__wr">
+							<h3 class="popup__title">Есть уточнения?</h3>
+							<p class="popup__text text">Отвечаем на вопросы</p>
 						</div>
-						<div class="popup__input">
-							<label for="popumInputTel" class="form-label text_sm">Ваш телефон:</label>
-							<input type="tel" class="form-control" placeholder="+7 975 123 45 67" id="popumInputTel">
-						</div>
-					</form>
+						<form class="popup__form">
+							<div class="popup__input">
+								<label for="popumInputName" class="form-label text_sm">Ваше имя:</label>
+								<input type="email" placeholder="Василий" class="form-control" id="popumInputName" aria-describedby="emailHelp">
+							</div>
+							<div class="popup__input">
+								<label for="popumInputTel" class="form-label text_sm">Ваш телефон:</label>
+								<input type="tel" class="form-control" placeholder="+7 975 123 45 67" id="popumInputTel">
+							</div>
+						</form>
+						<button type="submit" class="popup__btn btn btn_primary">Заказать обратный звонок</button>
+					</div>
 				</div>
-				<button type="submit" class="popup__btn btn btn_primary">Заказать обратный звонок</button>
+				<divvv>
 			</div>
 		</div>
 	</div>
-	<div class="popup popup-service">
-		<div class="popup__w">
-			<div class="popup__i"><img src="/img/wolksvagen/modal-car.png" alt=""></div>
-			<div class="popup__content">
-				<div class="popup__wr">
-					<h2 class="popup__title">Запись на СТО</h2>
-					<form class="popup__form">
-						<div class="popup__input">
-							<label for="popumInputNameServ" class="form-label text_sm">Ваше имя:</label>
-							<input type="email" placeholder="Василий" class="form-control" id="popumInputNameServ" aria-describedby="emailHelp">
-						</div>
-						<div class="popup__input">
-							<label for="popumInputTelServ" class="form-label text_sm">Ваш телефон:</label>
-							<input type="tel" class="form-control" placeholder="+7 975 123 45 67" id="popumInputTelServ">
-						</div>
-					</form>
+	<div class="modal  fade" id="modalServ" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="popup__w">
+					<div class="popup__i"><img src="/img/wolksvagen/modal-car.png" alt=""></div>
+					<div class="popup__content">
+						<h2 class="popup__title">Запись на СТО</h2>
+						<form class="popup__form">
+								<div class="popup__input">
+									<label for="popumInputNameServ" class="form-label text_sm">Ваше имя:</label>
+									<input type="email" placeholder="Василий" class="form-control" id="popumInputNameServ" aria-describedby="emailHelp">
+								</div>
+								<div class="popup__input">
+									<label for="popumInputTelServ" class="form-label text_sm">Ваш телефон:</label>
+									<input type="tel" class="form-control" placeholder="+7 975 123 45 67" id="popumInputTelServ">
+								</div>
+						</form>
+						<button type="submit" class="popup__btn btn btn_primary">Заказать обратный звонок</button>
+					</div>
 				</div>
-				<button type="submit" class="popup__btn btn btn_primary">Заказать обратный звонок</button>
+				</div>
+				<divvv>
 			</div>
-		</div>
 	</div>
 
 
@@ -566,7 +584,7 @@
 			</div>
 		</div>
 	</footer>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
