--- a/audi.html
+++ b/audi.html
@@ -507,7 +507,7 @@
 
 
 <div class="modal  fade" id="modalCall" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
 			<div class="popup__w">
 				<div class="popup__i"><img src="/img/audi/modal-car.png" alt=""></div>
@@ -534,7 +534,7 @@
   </div>
 </div>
 <div class="modal  fade" id="modalServ" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
 			<div class="popup__w">
 				<div class="popup__i"><img src="/img/audi/modal-car.png" alt=""></div>
