--- a/skoda.html
+++ b/skoda.html
@@ -505,7 +505,7 @@
 	</section>
 
 	<div class="modal  fade" id="modalCall" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
+		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 				<div class="popup__w">
 					<div class="popup__i"><img src="/img/skoda/modal-car.png" alt=""></div>
@@ -532,7 +532,7 @@
 		</div>
 	</div>
 	<div class="modal  fade" id="modalServ" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
+		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 				<div class="popup__w">
 					<div class="popup__i"><img src="/img/skoda/modal-car.png" alt=""></div>
