--- a/wolksvagen.html
+++ b/wolksvagen.html
@@ -52,7 +52,7 @@
 			<div class="row">
 				<div class="col-12 col-lg-6">
 					<h2 class="offer__subtitle">Оживляющий гараж</h2>
-					<h1 class="offer__title">Профильный автосервис <span>Ауди</span></h1>
+					<h1 class="offer__title">Профильный автосервис <span>ФОЛЬКСВАГЕН</span></h1>
 					<div class="offer__w">
 						<button class="offer__btn offer__btn_serv btn btn_primary" data-bs-toggle="modal" data-bs-target="#modalServ">Записаться на СТО</button>
 						<button class="offer__btn offer__btn_quest btn" data-bs-toggle="modal" data-bs-target="#modalCall">Получить консультацию</button>
@@ -65,7 +65,7 @@
 			</div>
 		</div>
 		<div class="offer_half">
-			<div class="offer__i"><img src="/img/wolksvagen/offer-bg.png" alt="Audi"></div>
+			<div class="offer__i"><img src="/img/wolksvagen/offer-bg.png" alt="wolksvagen"></div>
 		</div>
 	</section>
 
@@ -74,7 +74,7 @@
 			<div class="row">
 				<div class="col-12">
 					<h2 class="why__title">Оживляющий Гараж</h2>
-					<p class="why__text"><span>Профильное СТО</span> Обслуживаем владельцев автомобилей Ауди</p>
+					<p class="why__text"><span>Профильное СТО</span> Обслуживаем владельцев автомобилей Фольксваген</p>
 				</div>
 			</div>
 			<div class="row">
@@ -83,7 +83,7 @@
 						<div class="why-item__i"><img src="/img/svg/digit-blue.svg" alt=""></div>
 						<h3 class="why-item__title">Специализируемся на одной марке</h3>
 						<div class="why-item__text_w">
-							<p class="why-item__text">Мастера с опытом от 10 лет на Ауди</p>
+							<p class="why-item__text">Мастера с опытом от 10 лет на Фольксваген </p>
 						</div>
 					</div>
 				</div>
@@ -463,7 +463,7 @@
 			<h2 class="contacts__title">Оживляющий гараж</h2>
 			<div class="row align-items-center align-items-xl-center">
 				<div class="col-12 col-xl-5 col-lg-6">
-					<h3 class="contacts__subtitle">Ремонт и диагностика Ауди</h3>
+					<h3 class="contacts__subtitle">Ремонт и диагностика Фольксваген</h3>
 					<h3 class="contacts__cont">Контакты</h3>
 					<div class="contacts__item contacts__adress">
 						<div class="contacts__i"><img src="/img/svg/location-blue.svg" alt=""></div>
@@ -505,7 +505,7 @@
 	</section>
 
 	<div class="modal  fade" id="modalCall" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
+		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 				<div class="popup__w">
 					<div class="popup__i"><img src="/img/wolksvagen/modal-car.png" alt=""></div>
@@ -532,7 +532,7 @@
 		</div>
 	</div>
 	<div class="modal  fade" id="modalServ" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
+		<div class="modal-dialog modal-dialog-centered">
 			<div class="modal-content">
 				<div class="popup__w">
 					<div class="popup__i"><img src="/img/wolksvagen/modal-car.png" alt=""></div>
