--- a/audi.html
+++ b/audi.html
@@ -32,8 +32,8 @@
 								<li><a class="dropdown-item" data-service="7" href="#services">Электрика</a></li>
 							</ul>
 						</div>
-						<a href="#feedback" class="header__link text">Отзывы</a>
-						<a href="#contacts" class="header__link text">Контакты</a>
+						<a href="#contacts" class="header__link text" id="#contacts">Контакты</a>
+						<a href="#feedback" class="header__link text" id="#feedback">Отзывы</a>
 					</div>
 				</div>
 				<div class="col-2 col-sm-1 col-md-4 col-lg-5 d-flex align-items-center justify-content-end">
@@ -550,7 +550,7 @@
 								<input type="tel" class="form-control" placeholder="+7 975 123 45 67" id="popumInputTelServ">
 							</div>
 					</form>
-					<button type="submit" class="popup__btn btn btn_primary">Заказать обратный звонок</button>
+					<button type="submit" class="popup__btn btn btn_primary">Записаться на СТО</button>
 				</div>
 			</div>
 			</div>
