--- a/wolksvagen.html
+++ b/wolksvagen.html
@@ -390,25 +390,7 @@
 								Достойное место!!! Идеальное соотношение цены и качества! По качеству следят как у официала, по цене приятно ниже. Сразу оговорюсь, по цене не дешево, ибо ребята используют качественные запчасти и работу работают на совесть. После каждого ТО дают рекомендации на ближайшее будущее. Ничего менять и ремонтировать без согласования по цене не станут, поэтому переживать за инфаркт по счету после ремонта не приходится ))) Диагносты тоже есть и проводят диагностику не только на слух, но и путем использования специального оборудования ))) хотя на слух наверно тоже могут, не проверял. В общем если хочется чтоб машинка урчала и бегала то к ним, если хочется чтоб очень дешево да еще и с плясками (вы очень "важный" клиент, но очень "экономный" клиент и с своими "фирменными" запчастями) то к Ашотику в гараж ))))							</p>
 						</div>
 					</div>
-					<div class="swiper-slide">
-						<p class="swiper-slide__date">1 ноября</p>
-						<div class="swiper-slide__main">
-							<div class="swiper-slide__top">
-								<p class="swiper-slide__name">Эд Переверзев</p>
-								<div class="swiper-slide__list">
-									<img src="/img/svg/star.svg" class="swiper-slide__star" alt="">
-									<img src="/img/svg/star.svg" class="swiper-slide__star" alt="">
-									<img src="/img/svg/star.svg" class="swiper-slide__star" alt="">
-									<img src="/img/svg/star.svg" class="swiper-slide__star" alt="">
-									<img src="/img/svg/star.svg" class="swiper-slide__star" alt="">
-								</div>
-							</div>
-							<p class="swiper-slide__text">
-								В данный сервес обращался по поводу масложëра двигателя на шкода йети. После диагностики предложили два варианта подороже капитальный ремонт двигателя и подешевле, раскоксовка с заменой маслоотделитея. Я выбрал второй вариант. Работу сделали за несколько часов и качественно. До обращения в сервис, расход масла был 1 литр на 600-800 км, взависимости от дистанции поездок, короткие или длинные. После проведëнных работ, проехал более 800 км, уровень масла не изменился. Что меня радует, значит рекомендация мастеров, что можно попробывать обойтись без дорогого капитального ремонта, оказалась верной. За, что и выражаю свою благодарность.
-							</p>
-						</div>
-					</div>
-					<div class="swiper-slide">
+					<div class="swiper-slide">							<div class="swiper-slide">
 						<p class="swiper-slide__date">5 сентября</p>
 						<div class="swiper-slide__main">
 							<div class="swiper-slide__top">
